[gd_scene format=3 uid="uid://b075lpupsusib"]

[ext_resource type="Script" uid="uid://cp1s33235kpwp" path="res://Scripts/spawner_enemigo_1_1.gd" id="1_clrc1"]
[ext_resource type="PackedScene" uid="uid://cxcf674itg25g" path="res://Scenes/enemigo_blue.tscn" id="2_5edyw"]

[node name="SpawnerEnemigo1-1" type="Marker2D" unique_id=1892353435]
script = ExtResource("1_clrc1")

[node name="RefAltura" type="Marker2D" parent="." unique_id=2076850827]
unique_name_in_owner = true

[node name="EnemigoBlue" parent="RefAltura" unique_id=326105988 instance=ExtResource("2_5edyw")]

[node name="Timer" type="Timer" parent="." unique_id=71671762]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="Borrar" type="Timer" parent="." unique_id=479383271]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Borrar" to="." method="_on_borrar_timeout"]
